edited swagger mistakes,need to run a docker container online

--- a/.github/workflows/vegn-action.yml
+++ b/.github/workflows/vegn-action.yml
@@ -40,6 +40,7 @@ jobs:
           cd vegn-eCommerce/
           git pull 
           make build
+          sudo 
           sudo systemctl restart vegnSourceCodeRunner.service
 
     - name: Deploy to vegn-eCommerceLB
